--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 	</div>
 
 
-	<!------------------------- SignUp----------------------------- -->
+	<!-------------------------------- Sign Up ------------------------------------------->
 
 	<div id="signup" class="modal fade" role="dialog">
 		<div class="modal-dialog">
@@ -357,26 +357,23 @@
 		</div>
 	</div>
 	<!-------------------------------- Facebook Login SDK ------------------------------------------->
-	<script>
-		window.fbAsyncInit = function() {
-			FB.init({
-				appId : '1556866657895372',
-				xfbml : true,
-				version : 'v2.4'
-			});
-		};
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1556866657895372',
+      xfbml      : true,
+      version    : 'v2.4'
+    });
+  };
 
-		(function(d, s, id) {
-			var js, fjs = d.getElementsByTagName(s)[0];
-			if (d.getElementById(id)) {
-				return;
-			}
-			js = d.createElement(s);
-			js.id = id;
-			js.src = "//connect.facebook.net/en_US/sdk.js";
-			fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-	</script>
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 
 
 	<script>
@@ -478,7 +475,7 @@
 	<div id="status"></div>
 
 
-	<!------------------------- SignIn----------------------------- -->
+	<!-------------------------------- Sign In ------------------------------------------->
 	<div id="signin" class="modal fade" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -523,5 +520,11 @@
 			}, 'a[href="#"]');
 		});
 	</script>
+	<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 </body>
 </html>
