--- a/index.html
+++ b/index.html
@@ -519,6 +519,8 @@ class="fb-like"
 data-share="true"
 data-width="450"
 data-show-faces="true">
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
 </div>
 </body>
 </html>
