--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
   the FB.login() function when clicked.
 -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
+<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> -->
+<!-- </fb:login-button> -->
 
 <div id="status">
 </div>
@@ -519,8 +519,6 @@ class="fb-like"
 data-share="true"
 data-width="450"
 data-show-faces="true">
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
 </div>
 </body>
 </html>
