--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
   the FB.login() function when clicked.
 -->
 
-	<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-	</fb:login-button>
+	<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> -->
+	<!-- </fb:login-button> -->
 
 	<div id="status"></div>
 
@@ -525,6 +525,8 @@ class="fb-like"
 data-share="true"
 data-width="450"
 data-show-faces="true">
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
 </div>
 </body>
 </html>
