--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 	<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> -->
 	<!-- </fb:login-button> -->
 
-	<div id="status"></div>
+	<div id="status">zksdbfgf aifgriuf igfifgr</div>
 
 
 	<!-------------------------------- Sign In ------------------------------------------->
@@ -520,13 +520,11 @@
 			}, 'a[href="#"]');
 		});
 	</script>
-<div
-class="fb-like"
-data-share="true"
-data-width="450"
-data-show-faces="true">
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
+<!-- <div -->
+<!-- class="fb-like" -->
+<!-- data-share="true" -->
+<!-- data-width="450" -->
+<!-- data-show-faces="true"> -->
 </div>
 </body>
 </html>
