--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ $(document).ready(function() {
 		var Name = $('#userName').val();
 		var Email = $('#userEmail').val();
 		var Password = $('#userPassword').val();
-		$.post('NewUser', {
+		$.post('NewUser.jsp', {
 			userName : Name,
 			userEmail : Email,
 			userPassword : Password
