--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 							style="text-align: center; font-size: 16px; margin-bottom: 18px;">Or
 							connect with</h5>
 						<div class="is-center">
-							<a href="#"><img src="images/fb_button.png"
+							<a href="userinfo.html"><img src="images/fb_button.png"
 								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img
 								src="images/linkedin_button.png" style="width: 40%;"></a>
 						</div>
