--- a/index.html
+++ b/index.html
@@ -27,7 +27,38 @@
 <link rel="stylesheet"
 	href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
 
+<!-------------------------------- Linkedin Login SDK ------------------------------------------->
+<script type="text/javascript" src="//platform.linkedin.com/in.js">
+    api_key:   75c20eo91xz6lm
+    onLoad:    onLinkedInLoad
+    authorize: true
+    lang:      en_US
+</script>
 
+<script type="text/javascript">
+    
+    // Setup an event listener to make an API call once auth is complete
+    function onLinkedInLoad() {
+        IN.Event.on(IN, "auth", getProfileData);
+    }
+
+    // Handle the successful return from the API call
+    function onSuccess(data) {
+        console.log(data);
+    }
+
+    // Handle an error response from the API call
+    function onError(error) {
+        console.log(error);
+    }
+
+    // Use the API call wrapper to request the member's basic profile data
+    function getProfileData() {
+        IN.API.Raw("/people/~").result(onSuccess).error(onError);
+    }
+
+</script>
+<!------------------------------------------------------------------------------------------------>
 <script src="javascripts/jquery-1.11.1.js" type="text/javascript"></script>
 <script type="text/javascript">
 	$(document).ready(function() {
@@ -345,6 +376,7 @@
 							<a href="userinfo.html"><img src="images/fb_button.png"
 								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img
 								src="images/linkedin_button.png" style="width: 40%;"></a>
+						
 						</div>
 					</form>
 				</div>
@@ -523,7 +555,9 @@
 			}, 'a[href="#"]');
 		});
 	</script>
-	<div class="fb-like" data-share="true" data-width="450"
-		data-show-faces="true"></div>
+	
+	<script type="in/Login"></script>
+<!-- 	<div class="fb-like" data-share="true" data-width="450" -->
+<!-- 		data-show-faces="true"></div> -->
 </body>
 </html>
