--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 	<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> -->
 	<!-- </fb:login-button> -->
 
-	<div id="status"></div>
+<!-- 	<div id="status"></div> -->
 
 
 	<!-------------------------------- Sign In ------------------------------------------->
