--- a/userinfo.html
+++ b/userinfo.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <!-- all the images used in this page are under Creative Common License and taken from Flicker and Google Images -->
 <html lang="en">
-<head>
-<title>User Details</title>
-</head>
-<body>
-<h1>Hi There!!</h1>
-</body>
+<script type="text/javascript">
+a//lert( $_POST['tag']);
+// string value= request.querystring["value"].tostring();
+ document.write(request.querystring["value"].tostring());
+</script>
 </html>
