--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@
 <!-- 							<a href="#"><img src="images/fb_button.png" -->
 <!-- 								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img -->
 <!-- 								src="images/linkedin_button.png" style="width: 40%;"></a> -->
-						<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
-						<script type="in/Login"></script>
+						<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" style="width: 40%;"></fb:login-button>
+						<script type="in/Login" style="width: 40%;"></script>
 						</div>
 					</form>
 				</div>
