--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 //         var headline=member.headline; 
 
         //use information captured above
-        document.getElementById("status").innerHTML = 
+        document.getElementById("linkedin-status").innerHTML = 
             "<p id=\"" + member.id + "\">Hello " +  member.firstName + " " + member.lastName + "</p>";
     }
 
@@ -527,7 +527,7 @@
 	<!-- </fb:login-button> -->
 
 	<div id="status"></div>
-
+	<br<br<div id="linkedin-status"></div>
 
 	<!-------------------------------- Sign In ------------------------------------------->
 	<div id="signin" class="modal fade" role="dialog">
