--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 //         var lastName=member.lastName; 
 //         var photo=member.pictureUrl; 
 //         var headline=member.headline; 
-
+alert(member.firstName);
         //use information captured above
         document.getElementById("linkedin-status").innerHTML = 
             "<p id=\"" + member.id + "\">Hello " +  member.firstName + " " + member.lastName + "</p>";
@@ -526,7 +526,7 @@
 	<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> -->
 	<!-- </fb:login-button> -->
 
-	<div id="status"></div>
+<!-- 	<div id="status"></div> -->
 	<br<br<div id="linkedin-status"></div>
 
 	<!-------------------------------- Sign In ------------------------------------------->
