--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     // Handle the successful return from the API call
     function onSuccess(data) {
-    	
+    	alert(data);
         console.log(data);
     }
 
