--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     // Handle the successful return from the API call
     function onSuccess(data) {
     	alert(data);
+    	alert(Object.headline);
+    	alert(data.Object.headline);
+    	
         console.log(data);
     }
 
