--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
 						<div class="is-center">
 							<a href="#"><img src="images/fb_button.png"
 								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img
-								src="images/linkedin_button.png" style="width: 40%;" onclick="in/Login"></a>
-							<!-- 						<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button> -->
+								src="images/linkedin_button.png" style="width: 40%;" ></a>
+							<!--<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button> -->
 							<script type="in/Login" ></script>
 						</div>
 					</form>
