--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
 							style="text-align: center; font-size: 16px; margin-bottom: 18px;">Or
 							connect with</h5>
 						<div class="is-center">
-							<a href="#"><img src="images/fb_button.png"
-								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img
-								src="images/linkedin_button.png" style="width: 40%;" ></a>
+<!-- 							<a href="#"><img src="images/fb_button.png" -->
+<!-- 								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img -->
+<!-- 								src="images/linkedin_button.png" style="width: 40%;" ></a> -->
 							<!--<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button> -->
 							<script type="in/Login" ></script>
 						</div>
