--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
 						<div class="is-center">
 <!-- 							<a href="#"><img src="images/fb_button.png" -->
 <!-- 								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img -->
-<!-- 								src="images/linkedin_button.png" style="width: 40%;" ></a> -->
-							<!--<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button> -->
-							<script type="in/Login" ></script>
+<!-- 								src="images/linkedin_button.png" style="width: 40%;"></a> -->
+						<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+						<script type="in/Login"></script>
 						</div>
 					</form>
 				</div>
@@ -519,8 +519,8 @@
 	<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> -->
 	<!-- </fb:login-button> -->
 
-	<div id="status" style="float: left;"></div>
-	<div id="linkedin-status" style="float: right;"></div>
+<!-- 	<div id="status"></div> -->
+	<br<br<div id="linkedin-status"></div>
 
 	<!-------------------------------- Sign In ------------------------------------------->
 	<div id="signin" class="modal fade" role="dialog">
@@ -567,8 +567,8 @@
 			}, 'a[href="#"]');
 		});
 	</script>
-
-	<!-- 	<div class="fb-like" data-share="true" data-width="450" -->
-	<!-- 		data-show-faces="true"></div> -->
+	
+<!-- 	<div class="fb-like" data-share="true" data-width="450" -->
+<!-- 		data-show-faces="true"></div> -->
 </body>
 </html>
