--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
     function getProfileData() {
         IN.API.Raw("/people/~").result(onSuccess).error(onError);
     }
+    
+ 	// Retrieving a user profile when the user has authenticated
+    function onLinkedInAuth() {
+    	IN.API.Profile("me").result(displayProfiles);
+    }
+ 	
+    function ShowProfileData(profiles) {
+        var member = profiles.values[0];
+        //use information captured above
+        document.getElementById("linkedin-status").innerHTML = 
+            "<p id=\"" + member.id + "\">Hello " +  member.firstName + " " + member.lastName + "</p>";
+    }
 
 </script>
 <!------------------------------------------------------------------------------------------------>
@@ -80,7 +92,6 @@
 </head>
 
 <body class="body">
-
 	<div class="content pure-u-1">
 		<div class="pure-g-r">
 			<div class="content pure-g-r">
@@ -375,9 +386,9 @@
 						<div class="is-center">
 <!-- 							<a href="#"><img src="images/fb_button.png" -->
 <!-- 								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img -->
-<!-- 								src="images/linkedin_button.png" style="width: 40%;"></a> -->
-						<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
-						<script type="in/Login"></script>
+<!-- 								src="images/linkedin_button.png" style="width: 40%;" ></a> -->
+							<!--<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button> -->
+							<script type="in/Login" ></script>
 						</div>
 					</form>
 				</div>
@@ -508,8 +519,8 @@
 	<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> -->
 	<!-- </fb:login-button> -->
 
-<!-- 	<div id="status"></div> -->
-
+	<div id="status" style="float: left;"></div>
+	<div id="linkedin-status" style="float: right;"></div>
 
 	<!-------------------------------- Sign In ------------------------------------------->
 	<div id="signin" class="modal fade" role="dialog">
@@ -556,8 +567,8 @@
 			}, 'a[href="#"]');
 		});
 	</script>
-	
-<!-- 	<div class="fb-like" data-share="true" data-width="450" -->
-<!-- 		data-show-faces="true"></div> -->
+
+	<!-- 	<div class="fb-like" data-share="true" data-width="450" -->
+	<!-- 		data-show-faces="true"></div> -->
 </body>
 </html>
