--- a/index.html
+++ b/index.html
@@ -386,10 +386,8 @@
 						<div class="is-center">
 <!-- 							<a href="#"><img src="images/fb_button.png" style="width: 40%;" onclick="FB.login();"></a>  -->
 <!-- 							<a href="#"><img src="images/linkedin_button.png" style="width: 40%;" onclick="in/Login"></a> -->
-							<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" class="btn"></fb:login-button>
-							<script type="in/Login" class="btn">
-								Hello, <?js= firstName ?> <?js= lastName ?>.
-							</script>
+							<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" style="width: 40%;"></fb:login-button>
+							<script type="in/Login" style="width: 40%;"></script>
 						</div>
 					</form>
 				</div>
