--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 						</div>
 					</div>
 				</div>
+				<script type="text/javascript">Hello, <?js= firstName ?> <?js= lastName ?></script>
 				<!-------------------------------- Slide show/Banner ------------------------------------------->
 				<div class="pure-u-1 slideShow">
 					<div class="pure-g-r">
@@ -386,8 +387,8 @@
 						<div class="is-center">
 <!-- 							<a href="#"><img src="images/fb_button.png" style="width: 40%;" onclick="FB.login();"></a>  -->
 <!-- 							<a href="#"><img src="images/linkedin_button.png" style="width: 40%;" onclick="in/Login"></a> -->
-							<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" style="width: 40%;"></fb:login-button>
-							<script type="in/Login" style="width: 40%;"></script>
+							<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+							<script type="in/Login"></script>
 						</div>
 					</form>
 				</div>
