--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
 						</div>
 					</div>
 				</div>
-				<script type="text/javascript">Hello, <?js= firstName ?> <?js= lastName ?></script>
+				<br><br>
+				<script type="in/Login">Hello, <?js= firstName ?> <?js= lastName ?></script>
+				<br>
 				<!-------------------------------- Slide show/Banner ------------------------------------------->
 				<div class="pure-u-1 slideShow">
 					<div class="pure-g-r">
