--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 					</div>
 				</div>
 				<br><br>
-				<script type="in/Login">Hello, <?js= firstName ?> <?js= lastName ?></script>
-				<br>
+				<script type="in/Login" style="letter-spacing: normal;">Hello, <?js= firstName ?> <?js= lastName ?></script>
+			
 				<!-------------------------------- Slide show/Banner ------------------------------------------->
 				<div class="pure-u-1 slideShow">
 					<div class="pure-g-r">
