--- a/index.html
+++ b/index.html
@@ -119,9 +119,6 @@
 						</div>
 					</div>
 				</div>
-				<br><br>
-				
-			
 				<!-------------------------------- Slide show/Banner ------------------------------------------->
 				<div class="pure-u-1 slideShow">
 					<div class="pure-g-r">
@@ -387,9 +384,10 @@
 							style="text-align: center; font-size: 16px; margin-bottom: 18px;">Or
 							connect with</h5>
 						<div class="is-center">
-<!-- 							<a href="#"><img src="images/fb_button.png" style="width: 40%;" onclick="FB.login();"></a>  -->
-<!-- 							<a href="#"><img src="images/linkedin_button.png" style="width: 40%;" onclick="in/Login"></a> -->
-							<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+<!-- 							<a href="#"><img src="images/fb_button.png" -->
+<!-- 								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img -->
+<!-- 								src="images/linkedin_button.png" style="width: 40%;" ></a> -->
+							<!--<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button> -->
 							<script type="in/Login"></script>
 						</div>
 					</form>
@@ -544,8 +542,6 @@
 						<button type="submit"
 							class="pure-button pure-input-1-2 pure-button-primary">Sign
 							In</button>
-
-
 					</form>
 				</div>
 
