--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 <!-- 							<a href="#"><img src="images/fb_button.png" -->
 <!-- 								style="width: 40%;" onclick="FB.login();"></a> <a href="#"><img -->
 <!-- 								src="images/linkedin_button.png" style="width: 40%;" ></a> -->
-							<!--<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button> -->
+							<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
 							<script type="in/Login"></script>
 						</div>
 					</form>
