--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			var Name = $('#userName').val();
 			var Email = $('#userEmail').val();
 			var Password = $('#userPassword').val();
-			$.post('NewUser.jsp', {
+			$.post('NewUser', {
 				userName : Name,
 				userEmail : Email,
 				userPassword : Password
